# ai-maestro-orchestrator-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ai-maestro-orchestrator-agent.agent.toml  cliff.toml  mypy.ini  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
.serena/: project.yml
agents/: ai-maestro-orchestrator-agent-main-agent.md  amoa-checklist-compiler.md  amoa-docker-container-expert.md  amoa-experimenter.md  amoa-orchestrator-main-agent.md  amoa-task-summarizer.md  amoa-team-orchestrator.md
commands/: amoa-add-module.md  amoa-assign-module.md  amoa-cancel-orchestrator.md  amoa-check-agents.md  amoa-generate-replacement-handoff.md  amoa-modify-module.md  amoa-orchestration-status.md  amoa-orchestrator-loop.md  amoa-orchestrator-status.md  amoa-prioritize-module.md  amoa-reassign-kanban-tasks.md  amoa-reassign-module.md  amoa-register-agent.md  amoa-remove-module.md  amoa-start-orchestration.md
docs/: AGENT_OPERATIONS.md  FULL_PROJECT_WORKFLOW.md  ROLE_BOUNDARIES.md  STATUS_MAPPING.md  TEAM_REGISTRY_SPECIFICATION.md
git-hooks/: pre-push
hooks/: hooks.json
rules/: memory-protocol.md
scripts/: amoa_aimaestro_sync.py  amoa_assign_module.py  amoa_check_orchestration_phase.py  amoa_check_orchestrator_status.py  amoa_check_plan_phase.py  amoa_check_polling_due.py  amoa_check_remote_agents.py  amoa_check_verification_status.py  amoa_compile_handoff.py  amoa_compile_replacement_context.py  amoa_confirm_replacement.py  amoa_create_module_issues.py  amoa_design_search.py  amoa_download.py  amoa_file_tracker.py  amoa_generate_replacement_handoff.py  amoa_init_design_folders.py  amoa_install_rules.py  amoa_kanban_manager.py  amoa_memory.py  amoa_modify_module.py  amoa_notify_agent.py  amoa_orchestration_status.py  amoa_orchestrator_stop_check.py  amoa_poll_agent.py  amoa_reassign_kanban_tasks.py  amoa_reassign_module.py  amoa_register_agent.py  amoa_setup_orchestrator_loop.py  (+24 more)
(+478 files in other folders)
