[project]
name = "ai-maestro-orchestrator-agent"
version = "1.7.0"
description = "AI Maestro Orchestrator Agent - Task decomposition, parallel agent coordination, and verification loops"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Emasoft/ai-maestro-orchestrator-agent"
Repository = "https://github.com/Emasoft/ai-maestro-orchestrator-agent"

[dependency-groups]
dev = ["pytest>=8.0", "pyyaml>=6.0"]
